--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@headlessui/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "framer-motion": "^12.4.10",
+    "lucide-react": "^0.477.0",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5"
