--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "twilio": "^5.4.5",
     "validator": "^13.12.0"
   }
