--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "material-ui": "^0.20.2",
     "motion": "^12.4.10",
     "react": "^19.0.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
