--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-confetti-explosion": "^2.1.2",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
