--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,10 @@
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.4",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "twilio": "^5.4.5",
     "validator": "^13.12.0"
   }
