--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "headlessui": "^0.0.0",
     "material-ui": "^0.20.2",
     "motion": "^12.4.10",
+    "peerjs": "^1.5.4",
     "react": "^19.0.0",
     "react-confetti-explosion": "^2.1.2",
     "react-date-picker": "^11.0.0",
@@ -36,6 +37,7 @@
     "react-speech-recognition": "^4.0.0",
     "react-toastify": "^11.0.5",
     "reactjs-emoji-keyboard": "^1.0.17",
+    "socket.io-client": "^4.8.1",
     "tailwind-scrollbar": "^4.0.1",
     "to-words": "^4.4.0"
   },
